Remove thumnail as preview - avoid stretching small images

--- a/geonode_mapstore_client/client/themes/geonode/less/_media-viewer.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_media-viewer.less
@@ -31,6 +31,16 @@
         width: 100%
     }
 
+    .ms-media img.natural-image {
+        height: unset;
+        width: unset;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+
+    }
+
     .pdf-loader {
         position: absolute;
         top: 0;
